[package]
name = "routerify_ng"
version = "0.1.0"
description = "A lightweight, idiomatic, composable and modular router implementation with middleware support for the Rust HTTP library hyper.rs 1.7."
homepage = "https://github.com/guru901/routerify_ng"
repository = "https://github.com/guru901/routerify_ng"
keywords = ["hyper", "hyper-rs", "router", "routing", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Gurvinder Singh <guru911u@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = ["hyper-http1"]
all = ["hyper-http1", "hyper-http2"]
hyper-http1 = ["hyper/http1"]
hyper-http2 = ["hyper/http2"]

[dependencies]
hyper = { version = "1.7", default-features = false, features = ["server"] }
regex = { version = "1", default-features = false, features = ["std"] }
lazy_static = "1"
percent-encoding = "2"
http = "1.3.1"
hyper-util = {version = "0.1.17", features = ["server", "http1", "http2", "tokio", "client", "client-legacy"]}
tokio = "1"
http-body-util = "0.1"
bytes = "1"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
